# Grimoire-Skeleton

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.html  README.md  main.cpp
engine/: config.h  frame.h  graphics.h  platform.h
engine/src/: config.cpp  frame.cpp  graphics.cpp  platform.cpp
example/: example_renderer.h  example_sim.h
example/src/: example_renderer.cpp  example_sim.cpp
utility/: common.h
